# vn-training-python-2025

./: README.md
dhis2-oauth-cli/: .env.example  README.md  main.py  oauth_demo.py  pyproject.toml
fastapi-basics/: pyproject.toml
fastapi-basics-part2/: .env  pyproject.toml
fastapi-basics-part2/examples/: 01_typer_cli1.py  02_typer_cli2.py
fastapi-basics/examples/: 01_basics.py  02_items.py  03_query.py  04_jinja2.py  05_router.py  06_http_basic.py  07_http_bearer.py  08_qrcode.py
fastapi-basics/static/: index.css
fastapi-basics/templates/: index.html
pydantic-basics/: main.py  pyproject.toml
pydantic-basics/examples/: 00_basics.py  01_dhis2.py  02_validation.py  03_settings.py
uv-basics/: README.md
